--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -131,7 +131,7 @@ Computational linguistics (CL) studies the computational processes underlying (h
  \item How do we learn language?
 \end{itemize}
 
-Similiar methods and models are used in NLP and CL
+Similiar methods and models are used in NLP and CL.
 \end{scriptsize}
 \end{frame}
 
@@ -183,6 +183,8 @@ the mouth and/or the nose. \cite{fromkin2018introduction}
 \item Consonants are produced with some restriction or closure in the vocal tract that
 impedes the flow of air from the lungs. \cite{fromkin2018introduction}
 \item International Phonetic Alphabet (IPA):  alphabetic system of phonetic notation. 
+
+
 \end{itemize}
 }
 \end{frame}
@@ -195,7 +197,8 @@ impedes the flow of air from the lungs. \cite{fromkin2018introduction}
 \item Phonemes are  the basic form of a sound (e.g., the phoneme /p/)
 \item Example: Why \textbf{g} is silent in sign but is pronounced in the related word signature?
 \item Example: English speakers pronounce /t/ differently (e.g., in water)
- 
+\item In Spanish /z/ is pronounced differenly in Spain and Latin America.
+\item Phonetics vs Phonology: \url{http://www.phon.ox.ac.uk/jcoleman/PHONOLOGY1.htm}.
 \end{itemize}
 }
 \end{frame}
