--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -103,7 +103,7 @@
         \end{figure}
 
         
-\item Human language is highly ambiguous: \emph{I ate pizza with friends} vs. \emph{I ate pizza with olives}.
+\item Human language is highly ambiguous: \emph{I ate pizza with friends} vs. \emph{I ate pizza with olives} vs. \emph{I ate pizza with a fork}.
 
 \item It is also ever changing and evolving (e.g, Hashtags in Twitter). 
 
@@ -145,7 +145,7 @@ Similiar methods and models are used in NLP and CL.
  \item CL is essentially linguistics supported by computational methods (similar to computational biology, computational astronomy).
  \item In linguistics, language is the object of study.
  \item NLP focuses on solving well-defined tasks involving human language (e.g., translation, query answering, holding conversations).
- \item Fundamental linguistic insights may be crucial for accomplishing these tasks, but success is ultimately measured by whether and how well the job gets done (according to an evaluation metric) \cite{jacobbook} .
+ \item Fundamental linguistic insights may be crucial for accomplishing these tasks, but success is ultimately measured by whether and how well the job gets done (according to an evaluation metric) \cite{jacobbook}.
 \end{itemize}
 
 
