--- a/slides/NLP-IR.tex
+++ b/slides/NLP-IR.tex
@@ -169,7 +169,7 @@ t3 & program\\
 \item Another term normalization strategy.
  \item It also transform words into their roots.
  \item It performs a morphological analysis using reference dictionaries (lookup tables) to create equivalence classes between \emph{types}.
-\item For example for the token \emph{saw}, a stemming rule could return the term \emph{s}, while through lemmatization a dictionary would give us the term \emph{see}. 
+\item For example, for the token \emph{studies}, a stemming rule would return the term \emph{studi}, while through lemmatization we would get the term \emph{study}\footnote{\url{https://blog.bitext.com/what-is-the-difference-between-stemming-and-lemmatization/}}. 
 
 \end{itemize}
 
