--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -88,12 +88,6 @@
 
 \end{scriptsize}
 
-\begin{figure}[htb]
-	\centering
-	 \includegraphics[scale=0.24]{pics/activations.png}
-\end{figure}
-
-\footnotetext{Source:\cite{goldberg2017neural}}
 
 \end{frame}
 
@@ -201,16 +195,135 @@ the correct function generating our training data.
 
 
 
-\begin{frame}{Activation Functions}
-The nonlinearity $g$ can take many forms.
+\begin{frame}{Representation Power}
 \begin{scriptsize}
 \begin{itemize}
-\item \textbf{Sigmoid}.
+\item In practice, we train neural networks on relatively small amounts of data using local search methods.
+\item We also use hidden layers of relatively modest sizes (up to several thousands). 
+\item The universal approximation theorem does not give any guarantees under these conditions.
+\item However, there is definitely benefit in trying out more complex architectures than MLP1. 
+\item In many cases, however, MLP1 does indeed provide strong results.
 \end{itemize}
 
 
 \end{scriptsize}
 \end{frame}
+
+
+
+
+
+
+
+
+\begin{frame}{Activation Functions}
+\begin{scriptsize}
+\begin{itemize}
+\item The nonlinearity $g$ can take many forms. 
+\item There is currently no good theory as to which nonlinearity to apply in which conditions.
+\item Choosing the correct nonlinearity for a given task is for the most part an empirical question.
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+
+\begin{frame}{Sigmoid}
+\begin{scriptsize}
+\begin{itemize}
+\item The sigmoid activation function $\sigma(x) = \frac{1}{1+e^{-x}}$ is an S-shaped function, transforming each value x into the range $[0, 1]$.
+\item The sigmoid was the canonical nonlinearity for neural networks since their inception.
+\item Is currently considered to be deprecated for use in internal layers of neural networks, as the choices listed next prove to work much better empirically.
+\end{itemize}
+
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.3]{pics/sigmoid2.png}
+\end{figure}
+
+\end{scriptsize}
+\end{frame}
+
+
+
+\begin{frame}{Hyperbolic tangent (tanh)}
+\begin{scriptsize}
+\begin{itemize}
+\item The hyperbolic tangent $\operatorname{tanh}(x) = \frac{e^{2x}-1}{e^{2x}+1}$ activation function is an S-shaped function, transforming the values x into the range$[-1, 1]$.
+\end{itemize}
+
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.3]{pics/tanh.png}
+\end{figure}
+
+\end{scriptsize}
+\end{frame}
+
+
+
+
+\begin{frame}{Hard tanh}
+\begin{scriptsize}
+\begin{itemize}
+\item The hard-tanh activation function is an approximation of the tanh function which is faster to compute and to find derivatives thereof:
+\end{itemize}
+
+  \[
+    \operatorname{hardtanh}(x) = \left\{\begin{array}{lr}
+        -1 & x < -1\\
+        1 & x > 1\\
+        x & \text{otherwise.} 
+        \end{array} \right\} 
+  \]
+
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.3]{pics/hardtanh.png}
+\end{figure}
+
+\end{scriptsize}
+\end{frame}
+
+
+
+\begin{frame}{ReLU}
+\begin{scriptsize}
+\begin{itemize}
+\item The rectifier activation function \cite{glorot2011deep}, also known as the recti fied linear unit is a very simple activation function.
+\item It is easy to work with and was shown many times to produce excellent results.
+\item The ReLU unit clips each value $x < 0$ at $0$.
+\begin{displaymath}
+ \operatorname{ReLU}(x) = \operatorname{max}(0,x)
+\end{displaymath}
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.3]{pics/relu.png}
+\end{figure}
+\item It performs well for many tasks, especially when combined with the dropout regularization technique (to be explained later).
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+
+
+\begin{frame}{Activation Functions}
+\begin{scriptsize}
+\begin{itemize}
+\item As a rule of thumb, both ReLU and tanh units work well, and significantly outperform the sigmoid.
+\item You may want to experiment with both tanh and ReLU activations, as each one may perform better in different settings.
+\item The figure from below shows the shapes of the different activations functions, together with the shapes of their derivatives.
+\end{itemize}
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.35]{pics/activations.png}
+\end{figure}
+
+\footnotetext{Source:\cite{goldberg2017neural}}
+\end{scriptsize}
+\end{frame}
+
+
+
 
 
 \begin{frame}{Training}
@@ -244,11 +357,18 @@ The nonlinearity $g$ can take many forms.
 
 \footnotetext{Source: \url{https://sebastianraschka.com/images/faq/closed-form-vs-gd/ball.png}}
 
-
 \end{frame}
 
 
+\begin{frame}{Gradient Descent}
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.45]{pics/gradientdescent.png}
+\end{figure}
 
+\footnotetext{\cite{goodfellow2016deep}}
+
+\end{frame}
 
 
 \begin{frame}{Online Stochastic Gradient Descent}
