--- a/assignments/assignment_1/assignment_1_baseline.ipynb
+++ b/assignments/assignment_1/assignment_1_baseline.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Template tarea 1\n",
+    "# Baseline tarea 1\n",
     "\n",
     "-----------------------------\n",
     "\n",
